test/classes/constructors/error-parenthesless-constructor.good
error-parenthesless-constructor.chpl:3: error: a constructor cannot be declared without parentheses
